# ChronusQ_EFP

./: .gitignore  AUTHORS  CHANGELOG.md  CITE.txt  CMakeLists.txt  DEPENDS  Doxyfile  INSTALL  README.md
basis/: sapporo-dkh3-dzp-2012_all.gbs  sapporo-dkh3-dzp-2012_no.gbs  sapporo-dkh3-dzp-2012_sp.gbs  sapporo-dkh3-dzp_all.gbs  sapporo-dkh3-dzp_no.gbs  sapporo-dkh3-dzp_sp.gbs  sapporo-dkh3-qzp-2012_all.gbs  sapporo-dkh3-qzp-2012_no.gbs  sapporo-dkh3-qzp-2012_sp.gbs  sapporo-dkh3-qzp_all.gbs  sapporo-dkh3-qzp_no.gbs  sapporo-dkh3-qzp_sp.gbs  sapporo-dkh3-tzp-2012_all.gbs  sapporo-dkh3-tzp-2012_no.gbs  sapporo-dkh3-tzp-2012_sp.gbs  sapporo-dkh3-tzp_all.gbs  sapporo-dkh3-tzp_no.gbs  sapporo-dkh3-tzp_sp.gbs  sapporo-dzp-2012_all.gbs  sapporo-dzp-2012_no.gbs  sapporo-dzp-2012_sp.gbs  sapporo-dzp_all.gbs  sapporo-dzp_no.gbs  sapporo-dzp_sp.gbs  sapporo-qzp-2012_all.gbs  sapporo-qzp-2012_no.gbs  sapporo-qzp-2012_sp.gbs  sapporo-qzp_all.gbs  sapporo-qzp_no.gbs  sapporo-qzp_sp.gbs  sapporo-tzp-2012_all.gbs  sapporo-tzp-2012_no.gbs  sapporo-tzp-2012_sp.gbs  sapporo-tzp_all.gbs  sapporo-tzp_no.gbs  sapporo-tzp_sp.gbs
cmake/: Boost.cmake  FindLibXC.cmake  FindLibint.cmake  HandleCXXFlags.cmake  HandleLA.cmake  HandleMPI.cmake
include/: aointegrals.hpp  atom.hpp  basisset.hpp  cerr.hpp  chronusq_config.hpp.in  chronusq_sys.hpp  chronusqefp.hpp  cqlinalg.hpp  cubegen.hpp  dft.hpp  extrapolate.hpp  fields.hpp  itersolver.hpp  memmanager.hpp  molecule.hpp  morspec.hpp  old-extrap.h  physcon.hpp  quantum.hpp  realtime.hpp  response.hpp  singleslater.hpp  tags  wavefunction.hpp
include/aointegrals/: contract.hpp  impl.hpp  inhouseaointegral.hpp  ortho.hpp  print.hpp
include/basisset/: basisset_def.hpp  basisset_util.hpp  reference.hpp
include/cqlinalg/: blas1.hpp  blas3.hpp  blasext.hpp  blasutil.hpp  cqlinalg_config.hpp  eig.hpp  factorization.hpp  matfunc.hpp  ortho.hpp  solve.hpp  svd.hpp  util.hpp
include/cxxapi/: boilerplate.hpp  input.hpp  options.hpp  output.hpp  procedural.hpp
include/grid/: integrator.hpp  quadrature.hpp
include/itersolver/: gmres.hpp  gplhr.hpp  impl.hpp  iterdiagonalizer.hpp  iterlinearsolver.hpp
include/quantum/: base.hpp  impl.hpp  preprocessor.hpp  print.hpp  (+1 more)
src/: CMakeLists.txt
tests/: CMakeLists.txt  ut.cxx  ut.hpp.in
tests/func/: CMakeLists.txt  contract.cxx  func.hpp  gplhr.cxx  ordqz.cxx
tests/func/reference/: contract.hdf5
tests/resp/: CMakeLists.txt  gpp.cxx  misc.cxx  resp.hpp  rfdr.cxx  rmor.cxx  rpp.cxx  rres.cxx  rres_gga.cxx  rres_hgga.cxx  rres_lda.cxx  upp.cxx
tests/resp/parallel/gresp/: water_6-311pGdp_x2c_dfdr.inp  water_6-311pGdp_x2c_fdr.inp  water_6-311pGdp_x2c_residue.inp
tests/resp/parallel/uresp/: oxygen_6-31Gd_ub3lyp_dfdr.inp  oxygen_6-31Gd_ub3lyp_fdr.inp  oxygen_6-31Gd_ub3lyp_residue.inp  oxygen_6-31Gd_uhf_dfdr.inp  oxygen_6-31Gd_uhf_fdr.inp  oxygen_6-31Gd_uhf_residue.inp
tests/resp/serial/gresp/: water_6-311pGdp_x2c_dfdr.inp  water_6-311pGdp_x2c_fdr.inp  water_6-311pGdp_x2c_residue.inp
tests/resp/serial/rmor/: water_6-31Gd_rhf_mor_gmres_direct.inp
tests/rt/: CMakeLists.txt  grt.cxx  rrt.cxx  rt.hpp  urt.cxx
tests/rt/parallel/grt/: water_6-311pGdp_x2c_delta_y.inp
tests/rt/parallel/rrt/: water_6-31Gd_rb3lyp_delta_y.inp  water_6-31Gd_rhf_delta_y.inp
tests/rt/parallel/urt/: oxygen_6-31Gd_ub3lyp_delta_y.inp  oxygen_6-31Gd_uhf_delta_y.inp
tests/rt/reference/: oxygen_6-31Gd_ub3lyp_delta_y.bin.ref  oxygen_6-31Gd_uhf_delta_y.bin.ref  water_6-311pGdp_x2c_delta_y.bin.ref  water_6-31Gd_rb3lyp_delta_y.bin.ref  water_6-31Gd_rhf_delta_y.bin.ref
tests/rt/serial/grt/: water_6-311pGdp_x2c_delta_y.inp
tests/rt/serial/rrt/: water_6-31Gd_rb3lyp_delta_y.inp  water_6-31Gd_rhf_delta_y.inp
tests/rt/serial/urt/: oxygen_6-31Gd_ub3lyp_delta_y.inp  oxygen_6-31Gd_uhf_delta_y.inp
tests/scf/: CMakeLists.txt  ghf_giao.cxx  ks.cxx  misc.cxx  rhf.cxx  rhf_giao.cxx  rhfnr.cxx  rks.cxx  scf.hpp  uhf.cxx  uhf_giao.cxx  uks.cxx  x2c.cxx  x2chf.cxx  x2cks.cxx
tests/scf/parallel/rhf/: water_6-31Gd_nr.inp
tests/scf/parallel/uhf/: li_6-31Gd.inp
tests/scf/parallel/x2c/: cd_sap_dz_dkh3_2012_sp.inp  cd_sap_dz_dkh3_2012_sp_b3lyp.inp  cd_sap_dz_dkh3_2012_sp_slater.inp  hg_sap_dz_dkh3_2012_sp.inp  hg_sap_dz_dkh3_2012_sp_b3lyp.inp  hg_sap_dz_dkh3_2012_sp_slater.inp  water_6-311+Gdp_b3lyp_sph.inp  water_6-311+Gdp_sph.inp  zn_sap_dz_dkh3_2012_sp.inp  zn_sap_dz_dkh3_2012_sp_b3lyp.inp  zn_sap_dz_dkh3_2012_sp_slater.inp
tests/scf/reference/: cd_sap_dz_dkh3_2012_sp.bin.ref  cd_sap_dz_dkh3_2012_sp_b3lyp.bin.ref  cd_sap_dz_dkh3_2012_sp_slater.bin.ref  hg_sap_dz_dkh3_2012_sp.bin.ref  hg_sap_dz_dkh3_2012_sp_b3lyp.bin.ref  hg_sap_dz_dkh3_2012_sp_slater.bin.ref  li_6-31Gd.bin.ref  oxygen_6-311pG**_B3LYP.bin.ref  oxygen_6-311pG**_BLYP.bin.ref  oxygen_6-311pG**_LSDA.bin.ref  oxygen_6-31Gd.bin.ref  oxygen_sto-3g.bin.ref  water_6-311+Gdp_cart_x2c.bin.ref  water_6-311+Gdp_cart_x2c_b3lyp.bin.ref  water_6-311+Gdp_sph_x2c.bin.ref  water_6-311+Gdp_sph_x2c_b3lyp.bin.ref  water_6-31Gd.bin.ref  water_6-31Gd_ed_0.01_0_0.bin.ref  water_6-31Gd_ed_0_0.01_0.bin.ref  water_6-31Gd_ed_0_0_0.01.bin.ref  water_cc-pVTZ_B3LYP.bin.ref  water_cc-pVTZ_BLYP.bin.ref  water_cc-pVTZ_LSDA.bin.ref  water_cc-pVTZ_cart_B3LYP.bin.ref  water_sto-3g_B3LYP.bin.ref  water_sto-3g_BHANDH.bin.ref  water_sto-3g_BHANDHLYP.bin.ref  water_sto-3g_BLYP.bin.ref  water_sto-3g_LSDA.bin.ref  water_sto-3g_PBE0.bin.ref  water_sto-3g_PBEXPBEC.bin.ref  water_sto-3g_SLATER.bin.ref  zn_sap_dz_dkh3_2012_sp.bin.ref  zn_sap_dz_dkh3_2012_sp_b3lyp.bin.ref  zn_sap_dz_dkh3_2012_sp_slater.bin.ref
tests/scf/serial/rhf/: water_6-31Gd_nr.inp
tests/scf/serial/uhf/: li_6-31Gd.inp
tests/scf/serial/x2c/: cd_sap_dz_dkh3_2012_sp.inp  cd_sap_dz_dkh3_2012_sp_b3lyp.inp  cd_sap_dz_dkh3_2012_sp_slater.inp  hg_sap_dz_dkh3_2012_sp.inp  hg_sap_dz_dkh3_2012_sp_b3lyp.inp  hg_sap_dz_dkh3_2012_sp_slater.inp  water_6-311+Gdp_b3lyp_cart.inp  water_6-311+Gdp_b3lyp_sph.inp  water_6-311+Gdp_cart.inp  water_6-311+Gdp_sph.inp  zn_sap_dz_dkh3_2012_sp.inp  zn_sap_dz_dkh3_2012_sp_b3lyp.inp  zn_sap_dz_dkh3_2012_sp_slater.inp
(+153 files in other folders)
